searchAllBucks completed
